@@ -6,6 +6,8 @@
 
   :javac-options ["-target" "1.8" "-source" "1.8" "-Xlint:-options"]
 
+  :jvm-opts ["--add-modules" "java.xml.bind"]
+
   :global-vars {*warn-on-reflection* true
                *assert* true}
 
@@ -14,8 +16,7 @@
 
   :java-source-paths ["java"]
 
-  :profiles {:test {:jvm-opts ["-Xmx1g" "-server"
-
+  :profiles {:test {:jvm-opts ["-Xmx1g" "-server" "--add-modules" "java.xml.bind"
                                ;;------- Properties for kerberos authentication
                                ;"-Dsun.security.krb5.debug=true"
                                ;"-Djava.security.debug=gssloginconfig,configfile,configparser,logincontext"
@@ -26,6 +27,7 @@
              :uberjar {:aot :all}
 
              :repl {:jvm-opts [
+                               "--add-modules" "java.xml.bind"
                                "-Xmx512m"
                                "-Dsun.security.krb5.debug=true"
                                "-Djava.security.debug=gssloginconfig,configfile,configparser,logincontext"
@@ -35,6 +37,7 @@
 
              :vagrant-digital {
                                :jvm-opts [
+                                          "--add-modules" "java.xml.bind"
                                           ;"-Dcom.sun.management.jmxremote.port=8855"
                                           "-Dcom.sun.management.jmxremote.authenticate=false"
                                           "-Dcom.sun.management.jmxremote.ssl=false"
@@ -46,6 +49,7 @@
   :main kafka-clj.app
 
   :plugins [[lein-midje "3.2.1"]
+            [lein-ancient "0.6.15"]
             [lein-kibit "0.0.8"]]
 
   :test-paths ["test" "test-java"]
@@ -53,21 +57,21 @@
   :dependencies [
                  [tcp-driver "0.1.2-SNAPSHOT"]
 
-                 [com.taoensso/carmine "2.15.0" :exclusions [org.clojure/clojure]]
-                 [org.redisson/redisson "3.2.2" :exclusions [io.netty/netty-buffer]]
+                 [com.taoensso/carmine "2.19.1" :exclusions [org.clojure/clojure]]
+                 [org.redisson/redisson "3.11.5" :exclusions [io.netty/netty-buffer]]
 
                  [com.alexkasko.unsafe/unsafe-tools "1.4.4"]
 
-                 [criterium "0.4.4" :scope "test"]
+                 [criterium "0.4.5" :scope "test"]
 
-                 [prismatic/schema "1.1.3"]
-                 [org.mapdb/mapdb "1.0.9"]
-                 [org.xerial.snappy/snappy-java "1.1.2.4"]
+                 [prismatic/schema "1.1.12"]
+                 [org.mapdb/mapdb "3.0.7"]
+                 [org.xerial.snappy/snappy-java "1.1.7.3"]
 
                  [net.jpountz.lz4/lz4 "1.3.0"]
-                 [org.clojure/tools.logging "0.3.1"]
+                 [org.clojure/tools.logging "0.5.0"]
 
-                 [fun-utils "0.6.1" :exclusions [org.clojure/tools.logging]]
+                 [fun-utils "0.7.0" :exclusions [org.clojure/tools.logging]]
                  [clj-tuple "0.2.2"]
 
                  [io.netty/netty-buffer "4.1.6.Final"]
@@ -75,24 +79,24 @@
 
                  [com.codahale.metrics/metrics-core "3.0.2"]
 
-                 [org.clojure/core.async "0.2.374"
+                 [org.clojure/core.async "0.5.527"
                   :exclusions [org.clojure/tools.reader]]
 
-                 [com.stuartsierra/component "0.3.2"]
+                 [com.stuartsierra/component "0.4.0"]
 
-                 [org.openjdk.jol/jol-core "0.5"]
+                 [org.openjdk.jol/jol-core "0.9"]
 
-                 [org.clojure/clojure "1.8.0" :scope "provided"]
+                 [org.clojure/clojure "1.10.1" :scope "provided"]
 
-                 [org.clojure/test.check "0.9.0" :scope "test"]
+                 [org.clojure/test.check "0.10.0" :scope "test"]
 
-                 [midje "1.8.3" :scope "test"
+                 [midje "1.9.9" :scope "test"
                   :exclusions [potemkin
                                riddley]]
 
                  [org.clojars.runa/conjure "2.2.0" :scope "test"]
 
-                 [org.apache.zookeeper/zookeeper "3.4.8" :scope "test"
+                 [org.apache.zookeeper/zookeeper "3.5.6" :scope "test"
                   :exclusions [io.netty/netty]]
                  [org.apache.kafka/kafka_2.10 "0.10.1.0" :scope "test"
                   :exclusions [io.netty/netty
